Header background sticking out fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -31,13 +31,13 @@ header {
   align-items: center;
   justify-content: space-between;
   /* gap: 32px; */
-  margin: 0 -32px;
+  margin: 0;
   /* width: fit-content; */
   position: sticky;
   top: 0;
   z-index: 1;
   background: hsl(320deg, 10%, 90%);
-  padding: 12px 32px;
+  padding: 12px 0;
   border-radius: 0 0 8px 8px;
 }
 
